--- a/src/net8corewebmvc/mvccorenet8/mvccorenet8.csproj
+++ b/src/net8corewebmvc/mvccorenet8/mvccorenet8.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="models\" />
+  </ItemGroup>
+
 </Project>
