--- a/.azurepipelines/netfx48/azure-pipelines.yml
+++ b/.azurepipelines/netfx48/azure-pipelines.yml
@@ -4,7 +4,12 @@
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
 
 trigger:
-- main
+  branches:
+    include:
+    - main
+  paths:
+    include:
+    - src/netfx48webform
 
 pool:
   vmImage: 'windows-latest'
