--- a/.azurepipelines/android-pipelines.yml
+++ b/.azurepipelines/android-pipelines.yml
@@ -4,8 +4,13 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/android
 
 trigger:
-- main
-
+  branches:
+    include:
+      - main
+  paths:
+    include:
+    - src/Mobile/Android
+      
 pool:
   vmImage: 'ubuntu-latest'
 
@@ -17,7 +22,7 @@ jobs:
     - task: Bash@3
       inputs:
         targetType: 'inline'
-        script: 'mkdir -p ~/.gradle ; cp $(Build.SourcesDirectory)/.github/ci-gradle.properties ~/.gradle/gradle.properties'
+        script: 'mkdir -p ~/.gradle ; cp $(Build.SourcesDirectory)/src/Mobile/Android/.github/ci-gradle.properties ~/.gradle/gradle.properties'
     - task: JavaToolInstaller@0
       inputs:
         versionSpec: '17'
