enhance: add exclude path

--- a/.azurepipelines/net8/azure-pipelines-aspcoreweb.yml
+++ b/.azurepipelines/net8/azure-pipelines-aspcoreweb.yml
@@ -11,6 +11,12 @@ trigger:
   paths:
     include:
     - src/net8corewebmvc
+    exclude:
+    - src/*
+    - .azurepipelines/*
+    - .gitignore
+    - LICENSE
+    - README.md
 pool:
   vmImage: ubuntu-latest
 
