enhance add exclude path

--- a/.azurepipelines/netfx48/azure-pipelines.yml
+++ b/.azurepipelines/netfx48/azure-pipelines.yml
@@ -10,7 +10,12 @@ trigger:
   paths:
     include:
     - src/netfx48webform
-
+    exclude:
+    - src/*
+    - .azurepipelines/*
+    - .gitignore
+    - LICENSE
+    - README.md
 pool:
   vmImage: 'windows-latest'
 
