--- a/.azurepipelines/netfx48/azure-pipelines.yml
+++ b/.azurepipelines/netfx48/azure-pipelines.yml
@@ -3,6 +3,11 @@
 # Add steps that publish symbols, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
 
+pr:
+ branches:
+   include:
+    - net48fx
+
 trigger:
   branches:
     include:
