update pr trigger

--- a/.azurepipelines/net8/azure-pipelines-aspcoreweb.yml
+++ b/.azurepipelines/net8/azure-pipelines-aspcoreweb.yml
@@ -3,6 +3,11 @@
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
+pr:
+ branches:
+   include:
+    - net8aspcoreweb
+
 trigger:
   branches:
     include:
