change Win32 configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "dotnet.preferCSharpExtension": true,
-    "dotnet.defaultSolution": "disable"
+    "dotnet.defaultSolution": "disable",
+    "azure-pipelines.1ESPipelineTemplatesSchemaFile": false
 }
