--- a/.azurepipelines/win32/azure-pipelines-win32.yml
+++ b/.azurepipelines/win32/azure-pipelines-win32.yml
@@ -31,6 +31,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: Ms
 - task: DotNetCoreCLI@2
   displayName: 'restore dotnet core package'
   inputs:
