fix variable miss
change configuration and  platform variable

--- a/.azurepipelines/win32/azure-pipelines-win32.yml
+++ b/.azurepipelines/win32/azure-pipelines-win32.yml
@@ -41,8 +41,8 @@ steps:
 - task: VSBuild@1
   inputs:
     solution: '$(Build.SourcesDirectory)/src/mfcapps/mfcsampleapp.sln'
-    platform: '$(BuildConfiguration)'
-    configuration: '$(BuildPlatform)'
+    configuration: '$(BuildConfiguration)'
+    platform: '$(BuildPlatform)'
     clean: true
     maximumCpuCount: true
     msbuildArchitecture: 'x64'
